# Rozetka_Frontend_4__

./: main.py  pyproject.toml
src/data/: data_actions.py  forms.py
src/templates/: _base.html  _navigation.html  product.html  singup.html
